tests/ui/generator/auto-trait-regions.drop_tracking_mir.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/auto-trait-regions.rs:48:19
   |
LL |         let a = A(&mut true, &mut true, No);
   |                   ^^^^^^^^^
LL |         yield;
   |         ----- possible yield occurs here

error[E0626]: borrow may still be in use when generator yields
  --> $DIR/auto-trait-regions.rs:48:30
   |
LL |         let a = A(&mut true, &mut true, No);
   |                              ^^^^^^^^^
LL |         yield;
   |         ----- possible yield occurs here

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:34:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `&'0 OnlyFooIfStaticRef` must implement `Foo`, for any lifetime `'0`...
   = note: ...but `Foo` is actually implemented for the type `&'static OnlyFooIfStaticRef`

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:52:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `Foo` would have to be implemented for the type `A<'0, '1>`, for any two lifetimes `'0` and `'1`...
   = note: ...but `Foo` is actually implemented for the type `A<'_, '2>`, for some specific lifetime `'2`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0626`.
